2001-02-21  Chema Celorio  <chema@celorio.com>

	* users-conf.in (xml_print): quote the group too.

2001-02-21  Chema Celorio  <chema@celorio.com>
	
	* users-conf.in : replace the plaint_to_entities & entities
	to plain with xst_xml_quote & xst_xml_unquote
	(xml_print): quote the user data before sending it
	to the front end.

	* boot-conf.in (quote): remove use xst_xml_quote
	(unquote): remove use xst_xml_unquote

	* xml.pl (xst_xml_entities_to_plain): remove, use xst_xml_unquote
	(xst_xml_plain_to_entities): remove use xst_xml_quote instead

2001-02-21  Chema Celorio  <chema@celorio.com>

	* report.pl.in (xst_report): return, don't report status. This was
	causing a bug (which took me 3 hrs. to find) in the backends.

2001-02-21  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global_kw): New fn to add or modify global keywords.
	(xst_boot_set_global): New fn to add or modify globals (repsects all spaces).
	(xst_boot_del_global): Nef fn to delete globals (keywords and vars).
	(xst_boot_replace_from_table): My own version of xst_replace_from_table.
	(xst_boot_conf_set_images): Rewrote this and
	(xst_boot_conf_replace_image): this.
	(xst_boot_conf_replace_image): Now it adds new images too.

2001-02-20  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_parse_images): New (and nice) function to get images.

	* boot-conf.in (xml_print_global_kws): New function, splitted from 
	(xml_print_globals), added more known tags.

	* boot.pl.in (xst_boot_conf_get): Use those new functions.
	(xst_boot_parse_global_kw): New function to parse global lilo.conf keyword.
	(xst_boot_parse_global): New function to parse global lilo variable.

2001-02-19  Chema Celorio  <chema@celorio.com>

	* be.pl.in (xst_buffer_save): remove this function it is
	duplicated in file.pl
	(xst_buffer_load): ditto
	(xst_buffer_clean): ditto

2001-02-19  Arturo Espinosa  <arturo@ximian.com>

	* network.pl: Ensure local host entry, by checking the internal